# MOTDFix

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/: motd_fix_plugin.h
src/: motd_fix_plugin.cpp
